--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 autopep8==1.5.4
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
 cssmin==0.2.0
 Flask==1.1.2
 Flask-Assets==2.0
 Flask-WTF==0.14.3
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsmin==2.2.2
 MarkupSafe==1.1.1
 pycodestyle==2.6.0
+requests==2.25.1
 toml==0.10.2
+urllib3==1.26.2
 webassets==2.0
 Werkzeug==1.0.1
 WTForms==2.3.3
