--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+astroid==2.4.2
 autopep8==1.5.4
 certifi==2020.12.5
 chardet==4.0.0
@@ -7,14 +8,24 @@ Flask==1.1.2
 Flask-Assets==2.0
 Flask-WTF==0.14.3
 idna==2.10
+isort==5.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsmin==2.2.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 pycodestyle==2.6.0
+pylint==2.6.0
+python-http-client==3.3.1
 requests==2.25.1
+sendgrid==6.5.0
+six==1.15.0
+starkbank-ecdsa==1.1.0
+stripe==2.55.1
 toml==0.10.2
 urllib3==1.26.2
 webassets==2.0
 Werkzeug==1.0.1
+wrapt==1.12.1
 WTForms==2.3.3
